# fundamentals_of_data_science_shared

./: README.md  agenda.md  main.ipynb  pyproject.toml
Assignment_1_UN/: .gitignore  main.ipynb
Assignment_1_UN/canvas-resources/: Report_and_Submission_instructions.txt
Assignment_1_UN/notebooks/: UNSession_data_to_dataframe.ipynb
Assignment_1_UN/notebooks/disaster_data/utils/: disaster_data_utils.py
Assignment_1_UN/report/: README.md
Assignment_2_Ethics/: Part1_description.md  link_to_report.txt
Assignment_2_Ethics/Auxilliary/: Aux_Assignment2.ipynb  aux_assignment2_predictions.csv
Assignment_2_Ethics/Data/: predictions.csv
Assignment_2_Ethics/Data/Aux_Assignment2_files/: aux_assignment2_predictions.csv
Assignment_2_Ethics/Notebooks/: Aux_Assignment2.ipynb
Assignment_2_Ethics/Part1/: GroupA4_predictions.csv  our_predictions.csv  our_predictions_for_the_kaggle_set.csv  part1.ipynb
canvas-resources/: Lab3_Assignment1_Aux--.ipynb
data/: Speakers_by_session.csv
notebooks/: UNSession_data_to_dataframe.ipynb  UNsession_tokenized_from_1990.ipynb  prepare_data.ipynb
notebooks/.ipynb_checkpoints/: explore_disaster_data-checkpoint.ipynb
notebooks/disaster_data/: explore_disaster_data.ipynb  feature_engineering.ipynb  linear_regression.ipynb
notebooks/disaster_data/utils/: disaster_data_utils.py  speech_data_utils.py
