[tool.poetry]
name = "fundamentals-project"
version = "0.1.0"
description = ""
authors = ["Julius <j.b.huizign@gmail.com>"]
readme = "README.md"
packages = [{include = "fundamentals_of_data_science"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
openpyxl = "^3.1.2"
pandas = "^2.1.1"
ipykernel = "^6.25.2"
plotly = "^5.17.0"
matplotlib = "^3.8.0"
nbformat = "^5.9.2"
scikit-learn = "^1.3.1"
nltk = "^3.8.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
